syntax = "proto3";
package ixo.payments.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "ixo/payments/v1/payments.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/ixofoundation/ixo-blockchain/x/payments/types";

// Msg defines the payments Msg service.
service Msg {
  // SetPaymentContractAuthorisation defines a method for authorising or deauthorising a payment contract.
  rpc SetPaymentContractAuthorisation(MsgSetPaymentContractAuthorisation) returns (MsgSetPaymentContractAuthorisationResponse);

  // CreatePaymentTemplate defines a method for creating a payment template.
  rpc CreatePaymentTemplate(MsgCreatePaymentTemplate) returns (MsgCreatePaymentTemplateResponse);

  // CreatePaymentContract defines a method for creating a payment contract.
  rpc CreatePaymentContract(MsgCreatePaymentContract) returns (MsgCreatePaymentContractResponse);

  // CreateSubscription defines a method for creating a subscription.
  rpc CreateSubscription(MsgCreateSubscription) returns (MsgCreateSubscriptionResponse);

  // GrantDiscount defines a method for granting a discount to a payer on a specific payment contract.
  rpc GrantDiscount(MsgGrantDiscount) returns (MsgGrantDiscountResponse);

  // RevokeDiscount defines a method for revoking a discount previously granted to a payer.
  rpc RevokeDiscount(MsgRevokeDiscount) returns (MsgRevokeDiscountResponse);

  // EffectPayment defines a method for putting a specific payment contract into effect.
  rpc EffectPayment(MsgEffectPayment) returns (MsgEffectPaymentResponse);
}

// MsgSetPaymentContractAuthorisation defines a message for authorising or deauthorising a payment contract.
message MsgSetPaymentContractAuthorisation {
  option (gogoproto.goproto_stringer) = false;

  string payment_contract_id = 1 [(gogoproto.moretags) = "yaml:\"payment_contract_id\""];
  string payer_did           = 2 [(gogoproto.casttype) = "github.com/ixofoundation/ixo-blockchain/x/iid/types.DIDFragment", (gogoproto.moretags) = "yaml:\"payer_did\""];
  bool authorised            = 3 [(gogoproto.moretags) = "yaml:\"authorised\""];
  string payer_address  = 4 [(gogoproto.jsontag) = "payer_address", (gogoproto.moretags) = "yaml:\"payer_address\""];
}

// MsgSetPaymentContractAuthorisationResponse defines the Msg/SetPaymentContractAuthorisation response type.
message MsgSetPaymentContractAuthorisationResponse {}

// MsgCreatePaymentTemplate defines a message for creating a payment template.
message MsgCreatePaymentTemplate {
  option (gogoproto.goproto_stringer) = false;

  string creator_did               = 1 [(gogoproto.casttype) = "github.com/ixofoundation/ixo-blockchain/x/iid/types.DIDFragment", (gogoproto.moretags) = "yaml:\"creator_did\""];
  ixo.payments.v1.PaymentTemplate payment_template = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"payment_template\""];
  string creator_address  = 3 [(gogoproto.jsontag) = "creator_address", (gogoproto.moretags) = "yaml:\"creator_address\""];
}

// MsgCreatePaymentTemplateResponse defines the Msg/CreatePaymentTemplate response type.
message MsgCreatePaymentTemplateResponse {}

// MsgCreatePaymentContract defines a message for creating a payment contract.
message MsgCreatePaymentContract {
  option (gogoproto.goproto_stringer) = false;

  string creator_did                    = 1 [(gogoproto.casttype) = "github.com/ixofoundation/ixo-blockchain/x/iid/types.DIDFragment", (gogoproto.moretags) = "yaml:\"creator_did\""];
  string payment_template_id            = 2 [(gogoproto.moretags) = "yaml:\"payment_template_id\""];
  string payment_contract_id            = 3 [(gogoproto.moretags) = "yaml:\"payment_contract_id\""];
  string payer                          = 4 [(gogoproto.moretags) = "yaml:\"payer\""];
  repeated ixo.payments.v1.DistributionShare recipients = 5 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"recipients\""];
  bool can_deauthorise                  = 6 [(gogoproto.moretags) = "yaml:\"can_deauthorise\""];
  string discount_id                    = 7 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"discount_id\""];
  string creator_address  = 8 [(gogoproto.jsontag) = "creator_address", (gogoproto.moretags) = "yaml:\"creator_address\""];
}

// MsgCreatePaymentContractResponse defines the Msg/CreatePaymentContract response type.
message MsgCreatePaymentContractResponse {}

// MsgCreateSubscription defines a message for creating a subscription.
message MsgCreateSubscription {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters)  = false;

  string creator_did         = 1 [(gogoproto.casttype) = "github.com/ixofoundation/ixo-blockchain/x/iid/types.DIDFragment", (gogoproto.moretags) = "yaml:\"creator_did\""];
  string subscription_id     = 2 [(gogoproto.moretags) = "yaml:\"subscription_id\""];
  string payment_contract_id = 3 [(gogoproto.moretags) = "yaml:\"payment_contract_id\""];
  string max_periods         = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"max_periods\""];
  google.protobuf.Any period = 5 [(gogoproto.moretags) = "yaml:\"period\""];
  string creator_address  = 6 [(gogoproto.jsontag) = "creator_address", (gogoproto.moretags) = "yaml:\"creator_address\""];
}

// MsgCreateSubscriptionResponse defines the Msg/CreateSubscription response type.
message MsgCreateSubscriptionResponse {}

// MsgGrantDiscount defines a message for granting a discount to a payer on a specific payment contract.
message MsgGrantDiscount {
  option (gogoproto.goproto_stringer) = false;

  string sender_did          = 1 [(gogoproto.casttype) = "github.com/ixofoundation/ixo-blockchain/x/iid/types.DIDFragment", (gogoproto.moretags) = "yaml:\"sender_did\""];
  string payment_contract_id = 2 [(gogoproto.moretags) = "yaml:\"payment_contract_id\""];
  string discount_id         = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"discount_id\""];
  string recipient           = 4 [(gogoproto.moretags) = "yaml:\"recipient\""];
  string sender_address  = 5 [(gogoproto.jsontag) = "sender_address", (gogoproto.moretags) = "yaml:\"sender_address\""];
}

// MsgGrantDiscountResponse defines the Msg/GrantDiscount response type.
message MsgGrantDiscountResponse {}

// MsgRevokeDiscount defines a message for revoking a discount previously granted to a payer.
message MsgRevokeDiscount {
  option (gogoproto.goproto_stringer) = false;

  string sender_did          = 1 [(gogoproto.casttype) = "github.com/ixofoundation/ixo-blockchain/x/iid/types.DIDFragment", (gogoproto.moretags) = "yaml:\"sender_did\""];
  string payment_contract_id = 2 [(gogoproto.moretags) = "yaml:\"payment_contract_id\""];
  string holder              = 3 [(gogoproto.moretags) = "yaml:\"holder\""];
  string sender_address  = 4 [(gogoproto.jsontag) = "sender_address", (gogoproto.moretags) = "yaml:\"sender_address\""];
}

// MsgRevokeDiscountResponse defines the Msg/RevokeDiscount response type.
message MsgRevokeDiscountResponse {}

// MsgEffectPayment defines a message for putting a specific payment contract into effect.
message MsgEffectPayment {
  option (gogoproto.goproto_stringer) = false;
  string sender_did          = 1 [(gogoproto.casttype) = "github.com/ixofoundation/ixo-blockchain/x/iid/types.DIDFragment", (gogoproto.moretags) = "yaml:\"sender_did\""];
  string payment_contract_id = 2 [(gogoproto.moretags) = "yaml:\"payment_contract_id\""];
  repeated cosmos.base.v1beta1.Coin partial_payment_amount    = 6 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "yaml:\"partial_payment_amount\""];
  string sender_address  = 4 [(gogoproto.jsontag) = "sender_address", (gogoproto.moretags) = "yaml:\"sender_address\""];
}

// MsgEffectPaymentResponse defines the Msg/EffectPayment response type.
message MsgEffectPaymentResponse {}